[package]
name = "my-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-sdk = { version = "0.0.4", features = ["testutils"] }

[features]
default = ["testutils"]
testutils = []

[profile.release]
lto = "fat"
